# ai-agent-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  INTEGRATION_TEST.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  setup-hooks.sh
.github/workflows/: ci.yml
api/: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  agent.py  config.py  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  tools.py  vector_store.py
api/models/: __init__.py  chat_message.py  chat_request.py  chat_response.py  source_document.py  stream_chunk.py
api/tests/: README.md  __init__.py  conftest.py
api/tests/api/: test_endpoints.py
api/tests/builders/: __init__.py  document_builder.py  request_builder.py  response_builder.py
api/tests/config/: test_config.py  test_settings_validation.py
api/tests/factories/: __init__.py  agent_factory.py  llm_factory.py  vector_store_factory.py  vector_store_search_factory.py
api/tests/models/: test_models.py  test_pydantic_models.py
api/tests/services/: test_agent_service.py  test_main_service.py  test_score_filtering.py  test_tools_service.py  test_vector_store_service.py
api/tests/utils/: test_helpers.py
docs/: ARCHITECTURE.md
ingest/: .flake8  Makefile  README.md  __init__.py  bandit-report.json  env.example  pyproject.toml  pytest.ini
ingest/core/: __init__.py  clean.py  config_loader.py  ingest.py  query_test.py  setup.py
ingest/data/corpus/ai/: ai_bias.md  ai_glossary.md  ai_governance.md  computer_vision.md  deep_learning.md  ethical_ai.md  eval_loops.md  explainability.md  future_of_ai.md  history_ai.md  large_language_models.md  machine_learning.md  nlp_intro.md  prompt_engineering.md  rag_challenges.md  rag_intro.md  reinforcement_learning.md  robotics_ai.md  speech_recognition.md  transformers.md
ingest/data/corpus/computing/: ai_era.md  dawn_of_computing.md  internet_boom.md  mainframe_era.md  mobile_computing.md  operating_systems_networks.md  personal_computing.md  programming_languages.md  wwii_computers.md
ingest/models/: __init__.py  chunk.py  config.py  document.py  enums.py  exceptions.py  protocols.py  search.py
ingest/services/: __init__.py  chunking_service.py  document_processor.py  document_processor_service.py  pinecone_client.py
ingest/tests/: __init__.py  conftest.py
ingest/tests/builders/: __init__.py  chunk_builder.py  config_builder.py  document_builder.py  search_builder.py
ingest/tests/core/: __init__.py  test_config.py
ingest/tests/factories/: __init__.py  config_factory.py  content_factory.py  data_samples.py  token_factory.py
ingest/tests/models/: __init__.py
ingest/tests/services/: __init__.py  test_document_chunking_service.py  test_document_processor_service.py  test_markdown_chunking_strategy.py  test_pdf_chunking_strategy.py  test_text_chunking_strategy.py
ingest/tests/utils/: __init__.py  mock_context_manager.py  test_assertions.py  test_data_generator.py  test_document_content_extractor.py  test_document_title_extractor.py  test_markdown_section_splitter.py  test_paragraph_splitter.py  test_scenarios.py  test_sentence_splitter.py  test_text_cleaner.py  test_tiktoken_encoder.py
ingest/utils/: __init__.py  content_extractor.py  text_splitter.py  title_extractor.py  token_encoder.py
ui/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  Makefile  README.md  jest.config.js  nginx.conf  package-lock.json  package.json
ui/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
ui/src/components/: index.ts
ui/src/components/ChatContainer/: ChatContainer.css  ChatContainer.test.tsx  ChatContainer.tsx
ui/src/components/Message/: Message.css  Message.test.tsx  Message.tsx
ui/src/components/MessageInput/: MessageInput.css  MessageInput.test.tsx  MessageInput.tsx
ui/src/components/MessageList/: MessageList.css  MessageList.test.tsx  MessageList.tsx
ui/src/hooks/: useChat.test.ts  useChat.ts
ui/src/services/: chatService.test.ts  chatService.ts
ui/src/test-utils/: index.ts  mockData.ts
ui/src/test-utils/builders/: MessageBuilder.ts  index.ts
ui/src/test-utils/factories/: MessageFactory.ts  index.ts
ui/src/types/: chat.ts
