[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-demo-ingest"
version = "0.1.0"
description = "Document ingestion system for AI Agent Demo using OpenAI embeddings and Pinecone"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Agent Demo", email = "demo@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.12.0",
    "pinecone-client>=3.0.0",
    "PyPDF2>=3.0.1",
    "tiktoken>=0.5.2",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ingest-corpus = "ingest:main"
query-corpus = "query_test:main"
setup-ingest = "setup:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-exclude=tests/*",
    "--cov-exclude=setup.py"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[project.urls]
Homepage = "https://github.com/8thlight/ai-pocket-projects"
Repository = "https://github.com/8thlight/ai-pocket-projects"
Issues = "https://github.com/8thlight/ai-pocket-projects/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Configuration for the ingestion system
[tool.ai-agent-demo.api]
openai_api_key = ""  # Set via environment variable OPENAI_API_KEY
pinecone_api_key = ""  # Set via environment variable PINECONE_API_KEY
pinecone_environment = ""  # Set via environment variable PINECONE_ENVIRONMENT

[tool.ai-agent-demo.database]
index_name = "ai-agent-demo-index"

[tool.ai-agent-demo.embedding]
model = "text-embedding-3-small"
dimensions = 1536

[tool.ai-agent-demo.processing]
chunk_size = 1000
chunk_overlap = 200
embedding_batch_size = 100
upsert_batch_size = 100

[tool.ai-agent-demo.paths]
corpus_path = "../data/corpus"

[tool.ai-agent-demo.logging]
level = "INFO"
show_progress = true
